# Mac_OpenGL

./: .gitignore  CMakeLists.txt  README.md  shader.cpp  shader.h
colored_cube/: cube.fs.glsl  cube.vs.glsl  main.cpp
first_triangle/: main.cpp  triangle.fs.glsl  triangle.vs.glsl
textured_cube/: cube.fs.glsl  cube.vs.glsl  main.cpp  texture.cpp  texture.hpp
